@@ -23,7 +23,7 @@
     <groupId>com.hazelcast</groupId>
     <artifactId>hazelcast-parent</artifactId>
     <packaging>pom</packaging>
-    <version>5.8.0-SNAPSHOT</version>
+    <version>6.0.0-SNAPSHOT</version>
 
     <name>Hazelcast Parent POM</name>
     <description>Provides a base configuration for Hazelcast Platform builds</description>
@@ -90,7 +90,7 @@
         <avro.version>1.11.5</avro.version>
         <!-- When upgrading, check also if https://github.com/aws/aws-sdk-java-v2/issues/6863 was fixed
           and if yes, then revert changes in KinesisSourcePSupplier from CTT-661. -->
-        <aws.sdk2.version>2.47.3</aws.sdk2.version>
+        <aws.sdk2.version>2.50.2</aws.sdk2.version>
         <calcite.version>1.35.0</calcite.version>
         <!--
         Calcite 1.35 dependency that has CVE
@@ -98,30 +98,34 @@
         Not required with Calcite >=1.37,
          -->
         <janino.version>3.1.10</janino.version>
-        <debezium.version>3.6.0.Final</debezium.version>
+        <debezium.version>3.6.1.Final</debezium.version>
         <!-- When upgrading, consider if manually specified (to address dependency convergence) version of transitive dependency `com.google.errorprone:error_prone_annotations` should be upgraded -->
         <grpc.version>1.80.0</grpc.version>
-        <hadoop.version>3.4.3</hadoop.version>
+        <hadoop.version>3.5.0</hadoop.version>
         <jackson.version>3.2.1</jackson.version>
         <jackson2.version>2.22.1</jackson2.version>
         <jackson.annotation.version>2.22</jackson.annotation.version>
-        <jline.version>3.30.15</jline.version>
+        <jline.version>3.30.16</jline.version>
         <json-surfer.version>0.13</json-surfer.version>
         <jsr107.api.version>1.1.1</jsr107.api.version> <!-- JCache -->
         <!--
             Confluent depends on Kafka, and consideration should be given when upgrading
             https://docs.confluent.io/platform/current/installation/versions-interoperability.html#cp-and-apache-ak-compatibility
+            When upgrading, consider if manually specified (to address dependency convergence) version of transitive dependencies should be upgraded:
+            - `com.github.luben:zstd-jni`
         -->
         <kafka.version>4.3.1</kafka.version>
         <confluent.version>8.1.3</confluent.version>
         <kotlin.version>2.4.10</kotlin.version>
         <!--
             Match parquet and avro version - parquet-avro depends on avro - https://mvnrepository.com/artifact/org.apache.parquet/parquet-avro
+            When upgrading, consider if manually specified (to address dependency convergence) version of transitive dependency `com.github.luben:zstd-jni` should be upgraded
         -->
         <parquet.version>1.17.1</parquet.version>
 
         <spring.boot3.version>3.5.16</spring.boot3.version>
-        <org.springframework6.version>6.2.18</org.springframework6.version>
+        <org.springframework6.version>6.2.19</org.springframework6.version>
+        <tomcat10.version>10.1.57</tomcat10.version>
 
         <spring.boot4.version>4.1.0</spring.boot4.version>
         <org.springframework7.version>7.0.7</org.springframework7.version>
@@ -182,8 +186,19 @@
         <!-- When false, the public API check does not fail fast and generates a full report for manual verification -->
         <public.api.check.break.build>true</public.api.check.break.build>
 
+        <!--
+           Workaround: the git-commit-id-plugin uses JGit by
+           default, which does not support git worktrees. When
+           building from a git worktree (e.g. created with `git
+           worktree add`), pass -Dgit.useNativeGit=true to make
+           the plugin use the native `git` executable instead.
+       -->
+        <git.useNativeGit>false</git.useNativeGit>
+
         <shade.jar-with-dependencies.phase>package</shade.jar-with-dependencies.phase>
         <fat.dependency.classifier>jar-with-dependencies</fat.dependency.classifier>
+
+        <dependency.analyze.phase>validate</dependency.analyze.phase>
 
         <commonArgLine>
             -ea
@@ -195,6 +210,8 @@
             -Djunit.jupiter.execution.parallel.enabled=true
             -Duser.timezone=UTC
             -Djava.net.preferIPv4Stack=true
+            --add-opens java.base/java.net=ALL-UNNAMED
+            --add-opens java.base/sun.net=ALL-UNNAMED
         </commonArgLine>
     </properties>
 
@@ -250,7 +267,7 @@
             <dependency>
                 <groupId>io.netty</groupId>
                 <artifactId>netty-bom</artifactId>
-                <version>4.1.135.Final</version>
+                <version>4.1.136.Final</version>
                 <scope>import</scope>
                 <type>pom</type>
             </dependency>
@@ -316,79 +333,15 @@
                 <version>${kafka.version}</version>
                 <classifier>test</classifier>
             </dependency>
-            <!--
-                When upgrading, consider if manually specified (to address dependency convergence) version of transitive dependencies should be upgraded:
-                - `org.codehaus.woodstox:stax2-api`
-                - `commons-codec:commons-codec`
-                - `commons-logging:commons-logging`
-            -->
             <dependency>
                 <groupId>org.apache.hadoop</groupId>
-                <artifactId>hadoop-client</artifactId>
+                <artifactId>hadoop-client-api</artifactId>
                 <version>${hadoop.version}</version>
-                <exclusions>
-                    <!-- The following dependencies are not needed for our use of Hadoop -->
-                    <exclusion>
-                        <groupId>ch.qos.reload4j</groupId>
-                        <artifactId>reload4j</artifactId>
-                    </exclusion>
-                    <exclusion>
-                        <groupId>org.slf4j</groupId>
-                        <artifactId>slf4j-reload4j</artifactId>
-                    </exclusion>
-                    <exclusion>
-                        <groupId>org.eclipse.jetty</groupId>
-                        <artifactId>jetty-servlet</artifactId>
-                    </exclusion>
-                    <exclusion>
-                        <groupId>org.eclipse.jetty</groupId>
-                        <artifactId>jetty-webapp</artifactId>
-                    </exclusion>
-                    <exclusion>
-                        <groupId>javax.servlet.jsp</groupId>
-                        <artifactId>jsp-api</artifactId>
-                    </exclusion>
-                    <exclusion>
-                        <groupId>com.sun.jersey</groupId>
-                        <artifactId>jersey-servlet</artifactId>
-                    </exclusion>
-                    <exclusion>
-                        <groupId>org.jline</groupId>
-                        <artifactId>jline</artifactId>
-                    </exclusion>
-                    <exclusion>
-                        <groupId>org.apache.hadoop</groupId>
-                        <artifactId>hadoop-yarn-common</artifactId>
-                    </exclusion>
-                    <exclusion>
-                        <groupId>org.apache.hadoop</groupId>
-                        <artifactId>hadoop-yarn-api</artifactId>
-                    </exclusion>
-                    <exclusion>
-                        <groupId>org.apache.hadoop</groupId>
-                        <artifactId>hadoop-yarn-client</artifactId>
-                    </exclusion>
-                    <exclusion>
-                        <groupId>org.apache.kerby</groupId>
-                        <artifactId>kerb-core</artifactId>
-                    </exclusion>
-                    <exclusion>
-                        <groupId>org.apache.curator</groupId>
-                        <artifactId>curator-client</artifactId>
-                    </exclusion>
-                    <exclusion>
-                        <groupId>org.apache.curator</groupId>
-                        <artifactId>curator-recipes</artifactId>
-                    </exclusion>
-                    <exclusion>
-                        <groupId>org.apache.curator</groupId>
-                        <artifactId>curator-framework</artifactId>
-                    </exclusion>
-                    <exclusion>
-                        <groupId>org.bouncycastle</groupId>
-                        <artifactId>bcprov-jdk18on</artifactId>
-                    </exclusion>
-                </exclusions>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.hadoop</groupId>
+                <artifactId>hadoop-client-runtime</artifactId>
+                <version>${hadoop.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.avro</groupId>
@@ -511,6 +464,7 @@
                 <artifactId>httpclient</artifactId>
                 <version>4.5.14</version>
             </dependency>
+            <!-- Keep aligned with the HttpComponents versions used by the AWS SDK v2 Apache client. -->
             <dependency>
                 <groupId>org.apache.httpcomponents.client5</groupId>
                 <artifactId>httpclient5</artifactId>
@@ -526,12 +480,6 @@
                 <groupId>org.apache.httpcomponents.core5</groupId>
                 <artifactId>httpcore5-h2</artifactId>
                 <version>5.4.3</version>
-                <exclusions>
-                    <exclusion>
-                        <groupId>org.slf4j</groupId>
-                        <artifactId>*</artifactId>
-                    </exclusion>
-                </exclusions>
             </dependency>
             <dependency>
                 <groupId>com.fasterxml.woodstox</groupId>
@@ -557,6 +505,16 @@
                 <groupId>org.objenesis</groupId>
                 <artifactId>objenesis</artifactId>
                 <version>3.5</version>
+            </dependency>            
+            <!--
+                Addresses convergence between:
+                - `org.apache.parquet:parquet-hadoop` (transitively via `org.apache.parquet:parquet-avro`)
+                - `org.apache.kafka:kafka-clients`
+            -->
+            <dependency>
+                <groupId>com.github.luben</groupId>
+                <artifactId>zstd-jni</artifactId>
+                <version>1.5.7-3</version>
             </dependency>
             <dependency>
                 <groupId>io.github.classgraph</groupId>
@@ -731,7 +689,7 @@
             <dependency>
                 <groupId>com.google.cloud</groupId>
                 <artifactId>libraries-bom</artifactId>
-                <version>26.85.0</version>
+                <version>26.86.0</version>
                 <type>pom</type>
                 <scope>import</scope>
                 <!-- we specify explicit versions of these packages elsewhere, avoid conflicts -->
@@ -745,6 +703,12 @@
                         <artifactId>*</artifactId>
                     </exclusion>
                 </exclusions>
+            </dependency>
+            <!-- Convergence between org.apache.hadoop:hadoop-client:jar:3.5.0:compile and GCS -->
+            <dependency>
+                <groupId>com.google.re2j</groupId>
+                <artifactId>re2j</artifactId>
+                <version>1.8</version>
             </dependency>
 
             <dependency>
@@ -814,7 +778,7 @@
             <dependency>
                 <groupId>org.json</groupId>
                 <artifactId>json</artifactId>
-                <version>20260522</version>
+                <version>20260719</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -1400,6 +1364,22 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>analyze-exclusions</id>
+                        <phase>${dependency.analyze.phase}</phase>
+                        <goals>
+                            <goal>analyze-exclusions</goal>
+                        </goals>
+                        <configuration>
+                            <exclusionFail>true</exclusionFail>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 
@@ -1441,6 +1421,8 @@
                 <enforcer.skip>true</enforcer.skip>
                 <!-- https://maven.apache.org/plugins/maven-compiler-plugin/compile-mojo.html#useIncrementalCompilation -->
                 <maven.compiler.useIncrementalCompilation>false</maven.compiler.useIncrementalCompilation>
+                <!-- Skip running maven-dependency-plugin analysis -->
+                <dependency.analyze.phase>none</dependency.analyze.phase>
             </properties>
         </profile>
 
@@ -1640,28 +1622,6 @@
                 <!-- should only be Spring 6 -->
                 <spring.boot.version>${spring.boot3.version}</spring.boot.version>
                 <org.springframework.version>${org.springframework6.version}</org.springframework.version>
-            </properties>
-            <dependencies>
-                <dependency>
-                    <groupId>javax.inject</groupId>
-                    <artifactId>javax.inject</artifactId>
-                    <version>1</version>
-                    <scope>test</scope>
-                </dependency>
-            </dependencies>
-        </profile>
-        <profile>
-            <id>spring-5</id>
-            <activation>
-                <property>
-                    <name>tested.spring.override</name>
-                    <value>5</value>
-                </property>
-            </activation>
-            <properties>
-                <!-- should only be Spring 5 -->
-                <spring.boot.version>2.7.18</spring.boot.version>
-                <org.springframework.version>5.3.39</org.springframework.version>
             </properties>
             <dependencies>
                 <dependency>
